# ai-skills

./: .gitignore  LICENSE  README.md  release-manifest.json
claude-skills/: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  README.md  analysis-schema.md  plan-schema.md  planning-contract.md  project.toml.template  pyproject.toml
claude-skills/docs/: PROJECT-STATUS.md  config-reference.md  file-map.md  json-output-examples.md  ollama-bridge.md  product-cost-optimization-backlog.md  program-flow.md  skill-portability-notes.md
claude-skills/eval/: README.md  responses.mock.json  responses.template.json
claude-skills/examples/: ollama-bridge-campaign.ps1  ollama-bridge.ps1  plan-006-skill-ecosystem.json  plan-009-lifecycle-enforcement.json  plan-011-lifecycle-hardening.json  plan-012-quality-campaign.json
claude-skills/package/: install-manifest.json
claude-skills/references/: execution-model.md
claude-skills/scripts/: task_manager.py  task_models.py
claude-skills/tests/: conftest.py  test_artifacts.py  test_basic_provider_helpers.py  test_bootstrap_init.py  test_cli_commands.py  test_config.py  test_cost_optimization.py  test_execution_runtime.py  test_merge_safety.py  test_merge_workflow.py  test_parsing.py  test_plan_groups.py  test_plan_lifecycle.py  test_planning_context_plan_lifecycle.py  test_planning_context_scoping.py  test_plans.py  test_preflight_hardening.py  test_result_validation.py  test_skill_docs_contract.py  test_state_direct.py  test_state_persistence.py  test_task_manager_portability.py  test_toml_parsing.py  test_verify_command.py
(+235 files in other folders)
