[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-skills"
version = "0.1.0"
description = "Shared campaign-skill runtime and validation surface."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.coverage.run]
omit = []

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
